--- a/pages/prodact.html
+++ b/pages/prodact.html
@@ -22,7 +22,7 @@
 
             <nav class="header-nav">
               <a href="../pages/services.html" class="header-link header-link__active">Services</a>
-              <a href="../pages/prodact.html" class="header-link">Product</a>
+              <a href="../pages/prodact.html" class="header-link header-link__active">Product</a>
               <a href="#" class="header-link">Technology</a>
               <a href="#" class="header-link">
                 About
@@ -60,7 +60,7 @@
                   </svg>
                 </span>
               </a>
-              <a href="../pages/partern.html" class="header-link">Partner</a>
+              <a href="../pages/partern.html" class="header-link header-link__active">Partner</a>
             </nav>
 
             <div class="header-buttons">
@@ -89,28 +89,14 @@
       <!-- MAIN - START -->
 
       <main class="main">
-        <!-- BANNER - START -->
+        <!-- BANNERR - START -->
+           <section class="textred">
+             <div class="textred-texttt">The most advanced technology <br>
+                <b>always work hand-in-hand with <br> qualified people</b></div>
+           </section>
+       
 
-        <section class="banner">
-          <div class="banner-image">
-        <!--
-          <img
-              src="../imges/servises-page/banner-wave.svg"
-              alt="wave image"
-            /> 
-        --> 
-          </div>
-          <div class="banner-content">
-            <h2 class="banner-title">
-              Just a smile away from <br />
-              <span class="banner-title__red"
-                >Winning your customer’s trust</span
-              >
-            </h2>
-          </div>
-        </section>
-
-        <!-- BANNER - END -->
+        <!-- BANNERR - END -->
 
         <!-- SERVICES - START -->
 
@@ -148,7 +134,7 @@
               </div>
               <div class="services-image">
                 <img
-                  src="../imges/servises-page/services-image.svg"
+                  src="../imges/prodact-pages/panall.png"
                   alt="services image"
                 />
               </div>
